--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
 	"action": {
 		"default_popup": "popup/popup.html",
 		"default_icon": {
+			"48": "icons/icon48.png",
 			"128": "icons/icon128.png"
 		}
 	},
@@ -22,6 +23,7 @@
 	},
 	"options_page": "onboarding/onboarding.html",
 	"icons": {
+		"48": "icons/icon48.png",
 		"128": "icons/icon128.png"
 	}
 }
