--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
 		"service_worker": "service-worker.js",
 		"type": "module"
 	},
-	"options_page": "onboarding/onboarding.html",
+	"options_page": "settings/settings.html",
 	"icons": {
 		"48": "icons/icon48.png",
 		"128": "icons/icon128.png"
