fix: update settings to auto-refresh every 10 mins to avoid rate limit error.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 3,
 	"name": "PR Pulse",
 	"version": "1.0.0",
-	"description": "Keep your finger on the pulse of your PRs. Real-time GitHub monitoring that checks every minute.",
+	"description": "Keep your finger on the pulse of your PRs. Near real-time GitHub monitoring that checks every 10 minutes.",
 	"permissions": [
 		"storage",
 		"alarms"
